# rdp_cli

./: README.md  input.csv  pyproject.toml
src/rdp_cli/: cor_var.py  drop_column.py  extract_weekday.py  greet.py  impute.py  normalize.py  remove_special_chars.py  train_split.py
src/utils/: IO.py
tests/: test_rdp_cli.py
