[tool.poetry]
name = "rdp_cli"
version = "0.1.0"
description = ""
authors = ["Yang <yl4070@rit.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = "^8.1.0"
numba = "^0.55.1"
numpy = "^1.21"
datatable = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rdap = "rdp_cli.greet:rdap"
impute = "rdp_cli.impute:impute"